<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">semaforky</string>
    <string name="app_name_build">semaforky (git %s)</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="rounds">Rounds</string>
    <string name="setTime">Set Time</string>
    <string name="preparationTime">Preparation Time</string>
    <string name="warningTime">Warning Time</string>
    <string name="lines">Lines</string>
    <string name="gotoSettings">Settings</string>
    <string name="beginRound">Begin Round</string>
    <string name="endRound">End Round</string>
    <string name="set">Set</string>
    <string name="roundTime">Round time</string>
    <string name="startSet">Start Set</string>
    <string name="stopSet">Stop Set</string>
    <string name="cancelSet">Cancel Set</string>
    <string name="language">Language</string>
    <string name="line">Line</string>
    <string name="warningTitle">Warning</string>
    <string name="warningTimeInvalid">Warning time is longer then set time!</string>
    <string name="lineCountInvalid">More than two lines not supported!</string>
    <string name="wifiAp">Wifi AP</string>
    <string name="autoSet">Continuous</string>
    <string name="numberOfSets">Number of sets</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Česky</item>
    </string-array>
    <string name="lineRotation">Line Rotation</string>
    <string-array name="line_rotation_array">
        <item>Simple</item>
        <item>Alternating</item>
    </string-array>
    <string name="gotoManualControl">Manual Control</string>
    <string name="redLight">Red</string>
    <string name="greenLight">Green</string>
    <string name="yellowLight">Yellow</string>
    <string name="lightOff">Off</string>
    <string name="semaforky">Semaphores</string>
    <string name="clock">Clock</string>
    <string name="sirene">Sirene</string>
    <string name="clockCountdown">Clock countdown</string>
    <string name="linesAB">AB</string>
    <string name="linesCD">CD</string>
    <string formatted="false" name="wifiHotspotControlFailed">Application failed to enable Wifi Hotspot capability of the device. Please enable Wifi Hotspot manually in System menu with ESSID=%s and password=%s. Error detail message: %s</string>
</resources>
