<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vajsoft.semaforky.activities.SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:divider="?attr/dividerHorizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semaforky" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRedClicked"
                android:text="@string/redLight" />

            <Button
                android:id="@+id/btnGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGreenClicked"
                android:text="@string/greenLight" />

            <Button
                android:id="@+id/btnYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onYellowClicked"
                android:text="@string/yellowLight" />

            <Button
                android:id="@+id/btnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNoneClicked"
                android:text="@string/lightOff" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sirene" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnOneBeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOneBeep"
                android:text="1" />

            <Button
                android:id="@+id/btnTwoBeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTwoBeep"
                android:text="2" />

            <Button
                android:id="@+id/btnThreeBeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onThreeBeep"
                android:text="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnClockSet0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet0Clicked"
                android:text="0" />

            <Button
                android:id="@+id/btnClockSet5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet5Clicked"
                android:text="5" />

            <Button
                android:id="@+id/btnClockSet10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet10Clicked"
                android:text="10" />

            <Button
                android:id="@+id/btnClockSet20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet20Clicked"
                android:text="20" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCountdown30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet30Clicked"
                android:text="30" />

            <Button
                android:id="@+id/btnClockSet120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet120Clicked"
                android:text="120" />

            <Button
                android:id="@+id/btnClockSet240"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClockSet240Clicked"
                android:text="240" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClockCountdown" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCountdown30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCountdown30Clicked"
                android:text="30" />
        </TableRow>

    </TableLayout>

</RelativeLayout>